@@ -1,5 +1,8 @@
 2008-11-20  Jason Merrill  <jason@redhat.com>
 
+	PR c++/28513
+	* g++.dg/lookup/name-clash7.C: New test.
+
 	PR c++/37540
 	* g++.dg/cpp0x/decltype14.C: New test.
 
